finish proof of uniqueness

--- a/fourier-analysis/notebooks/basic-properties-of-fourier-series.ipynb
+++ b/fourier-analysis/notebooks/basic-properties-of-fourier-series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "epsilon = 0.5\n",
+    "epsilon = 0.1\n",
     "\n",
     "\n",
     "def t(theta: np.ndarray, k: int = 1) -> np.ndarray:\n",
@@ -69,8 +69,30 @@
     ")\n",
     "\n",
     "ax.legend()\n",
+    "plt.savefig(\n",
+    "    IMAGES_DIR / \"sequence-of-trigonometric-polynomials.png\",\n",
+    "    dpi=300,\n",
+    "    bbox_inches=\"tight\",\n",
+    ")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
